--- a/src/css/site.less
+++ b/src/css/site.less
@@ -1,62 +1,280 @@
 /* Semantic UI imports */
 
 /* Global */
-& { @import "~semantic-ui-less/definitions/globals/reset"; }
-& { @import "~semantic-ui-less/definitions/globals/site"; }
+& {
+  @import "~semantic-ui-less/definitions/globals/reset";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/globals/site";
+}
 
 /* Elements */
-& { @import "~semantic-ui-less/definitions/elements/button"; }
-& { @import "~semantic-ui-less/definitions/elements/container"; }
-& { @import "~semantic-ui-less/definitions/elements/divider"; }
+& {
+  @import "~semantic-ui-less/definitions/elements/button";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/container";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/divider";
+}
+
 //& { @import "~semantic-ui-less/definitions/elements/flag"; }
-& { @import "~semantic-ui-less/definitions/elements/header"; }
-& { @import "~semantic-ui-less/definitions/elements/icon"; }
-& { @import "~semantic-ui-less/definitions/elements/image"; }
-& { @import "~semantic-ui-less/definitions/elements/input"; }
-& { @import "~semantic-ui-less/definitions/elements/label"; }
-& { @import "~semantic-ui-less/definitions/elements/list"; }
+& {
+  @import "~semantic-ui-less/definitions/elements/header";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/icon";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/image";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/input";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/label";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/elements/list";
+}
+
 //& { @import "~semantic-ui-less/definitions/elements/loader"; }
 //& { @import "~semantic-ui-less/definitions/elements/rail"; }
 //& { @import "~semantic-ui-less/definitions/elements/reveal"; }
-& { @import "~semantic-ui-less/definitions/elements/segment"; }
+& {
+  @import "~semantic-ui-less/definitions/elements/segment";
+}
+
 //& { @import "~semantic-ui-less/definitions/elements/step"; }
 
 /* Collections */
-& { @import "~semantic-ui-less/definitions/collections/breadcrumb"; }
-& { @import "~semantic-ui-less/definitions/collections/form"; }
-& { @import "~semantic-ui-less/definitions/collections/grid"; }
-& { @import "~semantic-ui-less/definitions/collections/menu"; }
-& { @import "~semantic-ui-less/definitions/collections/message"; }
-& { @import "~semantic-ui-less/definitions/collections/table"; }
+& {
+  @import "~semantic-ui-less/definitions/collections/breadcrumb";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/collections/form";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/collections/grid";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/collections/menu";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/collections/message";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/collections/table";
+}
 
 /* Views */
 //& { @import "~semantic-ui-less/definitions/views/ad"; }
-& { @import "~semantic-ui-less/definitions/views/card"; }
+& {
+  @import "~semantic-ui-less/definitions/views/card";
+}
+
 //& { @import "~semantic-ui-less/definitions/views/comment"; }
 //& { @import "~semantic-ui-less/definitions/views/feed"; }
-& { @import "~semantic-ui-less/definitions/views/item"; }
+& {
+  @import "~semantic-ui-less/definitions/views/item";
+}
+
 //& { @import "~semantic-ui-less/definitions/views/statistic"; }
 
 /* Modules */
 //& { @import "~semantic-ui-less/definitions/modules/accordion"; }
-& { @import "~semantic-ui-less/definitions/modules/checkbox"; }
+& {
+  @import "~semantic-ui-less/definitions/modules/checkbox";
+}
+
 //& { @import "~semantic-ui-less/definitions/modules/dimmer"; }
-& { @import "~semantic-ui-less/definitions/modules/dropdown"; }
+& {
+  @import "~semantic-ui-less/definitions/modules/dropdown";
+}
+
 //& { @import "~semantic-ui-less/definitions/modules/embed"; }
 //& { @import "~semantic-ui-less/definitions/modules/modal"; }
-& { @import "~semantic-ui-less/definitions/modules/nag"; }
+& {
+  @import "~semantic-ui-less/definitions/modules/nag";
+}
+
 //& { @import "~semantic-ui-less/definitions/modules/popup"; }
 //& { @import "~semantic-ui-less/definitions/modules/progress"; }
 //& { @import "~semantic-ui-less/definitions/modules/rating"; }
-& { @import "~semantic-ui-less/definitions/modules/search"; }
-& { @import "~semantic-ui-less/definitions/modules/shape"; }
-& { @import "~semantic-ui-less/definitions/modules/sidebar"; }
+& {
+  @import "~semantic-ui-less/definitions/modules/search";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/modules/shape";
+}
+
+& {
+  @import "~semantic-ui-less/definitions/modules/sidebar";
+}
+
 //& { @import "~semantic-ui-less/definitions/modules/sticky"; }
 //& { @import "~semantic-ui-less/definitions/modules/tab"; }
-& { @import "~semantic-ui-less/definitions/modules/transition"; }
+& {
+  @import "~semantic-ui-less/definitions/modules/transition";
+}
 
 
 // Read the Docs
 @import "config";
 @import "components/header";
 @import "components/footer";
+@import "components/home_header";
+@import "components/buttons";
+
+/* ------ SITE WIDE STYLES ------ */
+body {
+  color: rgb(68, 68, 68);
+}
+
+h1 {
+  font-size: 28px;
+  line-height: 36px;
+  margin-bottom: 40px;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 28px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 20px;
+  line-height: 24px;
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
+.home .lead {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+section {
+  margin-bottom: 40px;
+}
+
+/* ------ END OF SITE WIDE STYLES ------ */
+
+a.cta-btn {
+  width: 300px;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.1em;
+  color: rgb(255, 255, 255);
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 1px 1px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px inset;
+  margin: 0.3em 0em;
+  background: url(../images/gradient.png) left bottom repeat-x rgb(142, 204, 76);
+  border-width: 1px;
+  border-style: solid;
+  border-image: initial;
+  border-color: rgb(107, 153, 57) rgb(107, 153, 57) rgb(80, 115, 43);
+  padding: 8px 15px;
+  border-radius: 3px;
+  text-decoration: none;
+}
+
+a.cta-btn:hover {
+  color: #fff;
+}
+
+/* ------- Wide search bar ------- */
+
+
+.wide-search-bar {
+  width: 100%;
+  margin-bottom: 60px;
+  border-radius: 5px;
+  background: #e6e6e6;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.wide-search-bar-wrapper {
+  padding: 8px;
+}
+
+.wide-search-bar-wrapper form {
+  display: flex;
+}
+
+.wide-search-bar input {
+  margin: 0;
+  height: 45px;
+  padding: 10px;
+  border-radius: 0;
+}
+
+.wide-search-bar .text-input-wrapper {
+  width: 99%;
+}
+
+.wide-search-bar input[type="text"] {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  width: 99%;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px inset;
+}
+
+.wide-search-bar .submit-input-wrapper {
+  width: 30%;
+}
+
+.wide-search-bar input[type="submit"] {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  height: 25px;
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+
+/*
+.wide-search-bar input[type="text"] {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  width: 513px;
+}
+
+.wide-search-bar input {
+  height: 25px;
+  margin: 0px;
+  padding: 10px;
+  border-radius: 0px;
+}
+
+.wide-search-bar input[type="submit"] {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  height: 47px;
+  width: 100%;
+  text-align: center;
+} */
+
+/* ------- End of wide search bar ------- */
