--- a/src/css/components/buttons.less
+++ b/src/css/components/buttons.less
@@ -18,3 +18,57 @@ a.regular:hover {
   background-color: #8CA1AF;
   color: #fff;
 }
+
+a.cta-btn {
+  width: 300px;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+  font-size: 1.1em;
+  color: rgb(255, 255, 255);
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 1px 1px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px inset;
+  margin: 0.3em 0em;
+  background: url(../../images/gradient.png) left bottom repeat-x rgb(142, 204, 76);
+  border-width: 1px;
+  border-style: solid;
+  border-image: initial;
+  border-color: rgb(107, 153, 57) rgb(107, 153, 57) rgb(80, 115, 43);
+  padding: 8px 15px;
+  border-radius: 3px;
+  text-decoration: none;
+}
+
+a.cta-btn:hover {
+  color: #fff;
+}
+
+input[type="submit"],
+input[type="button"],
+button,
+.button {
+  font-family: Lato, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #666;
+  font-weight: bold;
+  padding: 8px 15px;
+  border: none;
+  background: #e6e6e6 url(../../images/gradient.png) repeat-x bottom left;
+  margin: 30px 5px 20px 0;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
+  border: 1px solid #bfbfbf;
+  display: block;
+  text-decoration: none;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover,
+input[type="button"]:hover,
+button:hover,
+.button:hover {
+  background-color: #8ECC4C !important;
+  color: #fff !important;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5) !important;
+  border-color: #6B9939 !important;
+  border-bottom-color: #50732B !important;
+}
