Finish dashboard page

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'readthedocsext/theme/site.css' %}" />
     {% comment %} 
-      Line below is for webpack-dev-ser (hot-reloading). Uncomment line when commiting
+      Line below is for webpack-dev-server. Comment line when commiting
     {% endcomment %}
     {% comment %} <link rel="stylesheet" href="http://localhost:8080/static/site.css"> {% endcomment %}
 
