--- a/src/css/site.less
+++ b/src/css/site.less
@@ -136,10 +136,12 @@
 
 // Read the Docs
 @import "config";
+@import "components/buttons";
 @import "components/header";
 @import "components/footer";
 @import "components/home_header";
-@import "components/buttons";
+@import "components/dashboard";
+@import "components/table";
 
 /* ------ SITE WIDE STYLES ------ */
 body {
