Complete project detail overview page and add/update components

--- a/src/css/components/footer.less
+++ b/src/css/components/footer.less
@@ -1,6 +1,7 @@
 // Read the Docs footer
 
 #footer {
+  margin-top: 60px;
   width: calc(~'100% + 5px');
   background: url(../../images/header-home-bg.svg) bottom left repeat-x #465158;
   border-bottom: 1px solid #333;
