--- a/src/css/site.less
+++ b/src/css/site.less
@@ -141,7 +141,9 @@
 @import "components/footer";
 @import "components/home_header";
 @import "components/dashboard";
+@import "components/project_detail";
 @import "components/table";
+@import "components/badge_markup";
 
 /* ------ SITE WIDE STYLES ------ */
 body {
@@ -231,6 +233,12 @@ label {
   display: block;
   margin-bottom: 4px;
   color: #444;
+}
+
+pre {
+  margin: 15px 0;
+  white-space: pre;
+  overflow: auto;
 }
 
 /* ------ END OF SITE WIDE STYLES ------ */
